Remove content title and description classes.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="wrapper content_wrapper">
             <section class="content_main">
-                <h2 class="content_title__extra-large">What we&rsquo;re working on</h2>
+                <h2 class="h1">What we&rsquo;re working on</h2>
                 <p class="short-desc">
                     You deserve a website that works for you.
                     We&rsquo;re redesigning and reorganizing, section by section,
@@ -128,7 +128,7 @@
                             content_block__flush-bottom">
                     <div class="content-l content-l__large-gutters">
                         <section class="content-l_col content-l_col-1-2">
-                            <h3 class="content_title__medium">Why are we redesigning in&nbsp;beta?</h3>
+                            <h3>Why are we redesigning in&nbsp;beta?</h3>
                             <p class="short_desc">
                                 A beta release gives both users and developers a sense of
                                 new features and capabilities.
@@ -150,7 +150,7 @@
                             </ul>
                         </section>
                         <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                            <h3 class="content_title__medium">Open government, open code</h3>
+                            <h3>Open government, open code</h3>
                             <p class="short_desc">
                                 The new consumerfinance.gov is an open source project,
                                 but it's not our only one.
