--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -39,12 +39,12 @@
                 <section>
 
                     <div class="content_block content_block__flush-top">
-                        <h1 class="content_title__extra-large">
+                        <h1>
                             Deputy Director Steven Antonakes
                         </h1>
-                        <p class="content_desc__large">
+                        <h2 class="h3">
                             Steven L. Antonakes currently serves as the Deputy Director as well as the Associate Director for Supervision, Enforcement, and Fair Lending at the Consumer Financial Protection Bureau (CFPB).
-                        </p>
+                        </h2>
                         <p>
                             <figure class="float-media rwd-crop">
                                 <img class="rwd-crop_item"
@@ -78,7 +78,7 @@
                                         <img src="antonakes_round_90.jpg" alt="" width="60">
                                     </div>
                                     <div class="media_body">
-                                        <h1 class="h4">
+                                        <h1 class="h4 u-mb5">
                                             Downloads
                                         </h1>
                                         <a class="jump-link jump-link__download"
@@ -95,7 +95,7 @@
                             <div class="content-l_col
                                         content-l_col-1-2
                                         content-l_col__before-divider">
-                                <h1 class="h4">
+                                <h1 class="h4 u-mb5">
                                     Request speaking info
                                 </h1>
                                 <span class="cf-icon cf-icon-email"></span>
@@ -112,7 +112,7 @@
                         <section class="content_block
                                         content_block__padded-top
                                         content_block__border-top">
-                            <h1 class="content_title__large">
+                            <h1 class="h2">
                                 More information about Steve Antonakes
                             </h1>
                             <div class="content-l">
