--- a/the-bureau/bureau-structure/index.html
+++ b/the-bureau/bureau-structure/index.html
@@ -179,7 +179,7 @@
                                 content_block__border-top">
                     <div class="content-l">
                         <div class="content-l_col content-l_col-1-2">
-                            <h2 class="content_desc__large">Download a copy</h2>
+                            <h2 class="h3">Download a copy</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Dolorum non sapiente nobis molestias delectus optio ipsam</p>
                             <a class="btn btn__secondary" href="#">
@@ -188,7 +188,7 @@
                             </a>
                         </div>
                         <div class="content-l_col content-l_col-1-2">
-                            <h2 class="content_desc__large">Request speaking info</h2>
+                            <h2 class="h3">Request speaking info</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Dolorum non sapiente nobis molestias delectus optio ipsam</p>
                             <span class="cf-icon cf-icon-email list_icon"></span>
