--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -44,7 +44,7 @@
                                 content_block__flush-top
                                 content_block__padded-bottom
                                 content_block__border-bottom">
-                        <h1 class="content_title__medium">
+                        <h1 class="h3">
                             At the Consumer Financial Protection Bureau, we are committed to letting you
                             know how we’re working for you every day by, among other things, providing you
                             with a view into the workday of the CFPB’s senior leadership.
@@ -127,7 +127,7 @@
                     <!-- <section class="content_block
                                 content_block__padded-top
                                 content_block__border-top">
-                        <h1 class="content_title__large">
+                        <h1 class="h2">
                             Download a copy
                         </h1>
                         <p>
