--- a/the-bureau/history/index.html
+++ b/the-bureau/history/index.html
@@ -40,14 +40,14 @@
                 <section>
 
                     <div class="content_block content_block__flush-top">
-                        <h1 class="content_title__extra-large">
+                        <h1>
                             The history of the Consumer Financial Protection Bureau
                         </h1>
-                        <p class="content_desc__large">
+                        <h2 class="h3">
                             Richard Cordray serves as the first Director of the
                             Consumer Financial Protection Bureau.
                             He previously led the Bureau’s Enforcement Division.
-                        </p>
+                        </h2>
                         {{ macros.share(self.title(), true) }}
                     </div>
 
@@ -58,7 +58,7 @@
                     <section class="content_block content_block__padded-top content_block__border-top">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-2-3">
-                                <h1 class="content_title__large">{{ section.title|safe }}</h1>
+                                <h1 class="h2">{{ section.title|safe }}</h1>
                                 <p class="short-desc">
                                     {{ section.section_date_from }} &ndash; {{ section.section_date_to }}
                                 </p>
