Use p instead of h2 elements for intro paragraphs on Bureau pages.

--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -42,9 +42,9 @@
                         <h1>
                             Deputy Director Steven Antonakes
                         </h1>
-                        <h2 class="h3">
+                        <p class="h3">
                             Steven L. Antonakes currently serves as the Deputy Director as well as the Associate Director for Supervision, Enforcement, and Fair Lending at the Consumer Financial Protection Bureau (CFPB).
-                        </h2>
+                        </p>
                         <p>
                             <figure class="float-media rwd-crop">
                                 <img class="rwd-crop_item"
