--- a/the-bureau/history/index.html
+++ b/the-bureau/history/index.html
@@ -43,11 +43,11 @@
                         <h1>
                             The history of the Consumer Financial Protection Bureau
                         </h1>
-                        <h2 class="h3">
+                        <p class="h3">
                             Richard Cordray serves as the first Director of the
                             Consumer Financial Protection Bureau.
                             He previously led the Bureau’s Enforcement Division.
-                        </h2>
+                        </p>
                         {{ macros.share(self.title(), true) }}
                     </div>
 
