--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -41,7 +41,7 @@
             <div class="content_main content__flush-bottom content__flush-top-on-small">
                 
                 <h1>Our mission</h1>
-                <h2 class="h3">Our mission is to make markets for consumer financial products and services work for Americans - whether they are applying for a mortgage, choosing among credit cards, or using any number of other consumer financial products.</h2>
+                <p class="h3">Our mission is to make markets for consumer financial products and services work for Americans - whether they are applying for a mortgage, choosing among credit cards, or using any number of other consumer financial products.</p>
                 <p>Above all, this means ensuring that consumers get the information they need to make the financial decisions they believe are best for themselves and their families - that prices are clear up front, that risks are visible, and that nothing is buried in fine print. In a market that works, consumers should be able to make direct comparisons among products and no provider should be able to use unfair, deceptive, or abusive practices.<p>
                     
                 <section class="bureau-mission">
