--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -42,11 +42,11 @@
                         <h1>
                             Director Richard Cordray
                         </h1>
-                        <h2 class="h3">
+                        <p class="h3">
                             Richard Cordray serves as the first Director of the
                             Consumer Financial Protection Bureau. He previously
                             led the Bureau’s Enforcement Division.
-                        </h2>
+                        </p>
                         <p>
                             <figure class="float-media rwd-crop">
                                 <img class="rwd-crop_item"
