More header tweaks

--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -216,7 +216,7 @@
                         </div>
                         <div class="media_body">
                             <div class="bureau-history_text">
-                                <h2 class="h4">In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.</h2>
+                                <p class="h4">In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.</p>
                                 <a class="jump-link" href="#">
                                     Learn more about our history
                                 </a>
