Integrate cf-layout

--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -45,11 +45,11 @@
             </div>
 
             <aside class="content_sidebar">
-                <section class="content_block content_block__flush-top">
+                <section class="block block__flush-top">
                     {% include "related-posts.html" %}
                 </section>
-                <section class="content_block stay-informed">
-                    <div class="content_block__sub">
+                <section class="block stay-informed">
+                    <div class="block__sub">
                         <h1 class="header-slug">
                             <span class="header-slug_inner">
                                 Stay informed
@@ -60,7 +60,7 @@
                         </p>
                         {% include "email-subscribe-form.html" %}
                     </div>
-                    <div class="content_block__sub">
+                    <div class="block__sub">
                         {% include "rss.html" %}
                     </div>
                 </section>
