--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -251,10 +251,10 @@
 
                 </section><!-- END .content_main > section -->
 
-                <aside class="content_block
-                              content_block__flush-bottom
-                              content_block__flush-sides
-                              content_block__bg">
+                <aside class="block
+                              block__flush-bottom
+                              block__flush-sides
+                              block__bg">
                     <div class="content-l">
                         <section class="content-l_col content-l_col-1-2">
                             <h1 class="header-slug">
@@ -262,13 +262,13 @@
                                     Stay informed
                                 </span>
                             </h1>
-                            <div class="content_block content_block__sub content_block__flush-top">
+                            <div class="block block__sub block__flush-top">
                                 <p class="short-desc">
                                     Subscribe to our email newsletter. We will update you on new blogs.
                                 </p>
                                 {% include "email-subscribe-form.html" %}
                             </div>
-                            <div class="content_block content_block__sub">
+                            <div class="block block__sub">
                                 {% include "rss.html" %}
                             </div>
                         </section>
@@ -276,7 +276,7 @@
                             {% include "upcoming-events.html" %}
                         </section>
                     </div><!-- END .content-l -->
-                </aside><!-- END .content_block -->
+                </aside><!-- END .block -->
 
             </div><!-- END .content_main -->
             
