--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -38,7 +38,7 @@
             <div class="content_main content__flush-top-on-small">
                 <section>
 
-                    <div class="content_block content_block__flush-top">
+                    <div class="block block__flush-top">
                         <h1 class="content_title__extra-large">
                             Deputy Director Steven Antonakes
                         </h1>
@@ -66,10 +66,10 @@
                         {{ macros.share(self.title(), true) }}
                     </div>
                     
-                    <section class="content_block
-                                    content_block__padded-top
-                                    content_block__padded-bottom
-                                    content_block__border-top u-hide-on-mobile">
+                    <section class="block
+                                    block__padded-top
+                                    block__padded-bottom
+                                    block__border-top u-hide-on-mobile">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
@@ -109,9 +109,9 @@
                     
                     <aside>
 
-                        <section class="content_block
-                                        content_block__padded-top
-                                        content_block__border-top">
+                        <section class="block
+                                        block__padded-top
+                                        block__border-top">
                             <h1 class="content_title__large">
                                 More information about Steve Antonakes
                             </h1>
@@ -158,7 +158,7 @@
                             </div>
                         </section>
 
-                        <section class="content_block">
+                        <section class="block">
                             <h1 class="header-slug">
                                 <span class="header-slug_inner">
                                     Related links
