--- a/the-bureau/history/index.html
+++ b/the-bureau/history/index.html
@@ -39,7 +39,7 @@
             <div class="content_main content__flush-top-on-small">
                 <section>
 
-                    <div class="content_block content_block__flush-top">
+                    <div class="block block__flush-top">
                         <h1 class="content_title__extra-large">
                             The history of the Consumer Financial Protection Bureau
                         </h1>
@@ -55,7 +55,7 @@
 
                 {% for section in sections %}
 
-                    <section class="content_block content_block__padded-top content_block__border-top">
+                    <section class="block block__padded-top block__border-top">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-2-3">
                                 <h1 class="content_title__large">{{ section.title|safe }}</h1>
@@ -162,7 +162,7 @@
                                 </span>
                             </button>
                         </div><!-- END .history-section-expandable -->
-                    </section><!-- END .content_block -->
+                    </section><!-- END .block -->
 
                 {% endfor %}
 
