Replace block__flush-top/bottom with margin utilities

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -38,7 +38,7 @@
         </button>
     </div>
 
-    <div class="block block__flush-top expandable-group contact-list"
+    <div class="block u-mt0 expandable-group contact-list"
          data-accordion="true"
          id ="contact-list">
         <div class="expandable-group_header"
