--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -1,7 +1,7 @@
 {% set administrative_offices = get_document('contact', 'administrative-offices') %}
 {% set consumer_contact_center = get_document('contact', 'consumer-contact-center') %}
 
-<section class="block block__flush-top content-l">
+<section class="block u-mt0 content-l">
 
     <h1 class="h3 content-l_col content-l_col__stack-on-cols content-l_col-1-2">
         Mailing addresses
