--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -73,9 +73,9 @@
                             </div>
                         </div>
                     </section>
-                    <div class="block block__flush-bottom block__flush-sides block__bg">
+                    <div class="block u-mb0 block__flush-sides block__bg">
                         <div class="content-l">
-                            <section class="block block__flush-top content-l_col content-l_col-1-2">
+                            <section class="block u-mt0 content-l_col content-l_col-1-2">
                                 {% include "related-links.html" %}
                             </section>
                             <section class="block content-l_col content-l_col-1-2">
