--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -252,7 +252,7 @@
                 </section><!-- END .content_main > section -->
 
                 <aside class="block
-                              block__flush-bottom
+                              u-mb0
                               block__flush-sides
                               block__bg">
                     <div class="content-l">
@@ -262,7 +262,7 @@
                                     Stay informed
                                 </span>
                             </h1>
-                            <div class="block block__sub block__flush-top">
+                            <div class="block block__sub u-mt0">
                                 <p class="short-desc">
                                     Subscribe to our email newsletter. We will update you on new blogs.
                                 </p>
