--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -38,7 +38,7 @@
             <div class="content_main content__flush-top-on-small">
                 <section>
 
-                    <div class="block block__flush-top">
+                    <div class="block u-mt0">
                         <h1>
                             Director Richard Cordray
                         </h1>
@@ -204,7 +204,7 @@
                             </div>
                         </div>
 
-                        <section class="block block__flush-bottom">
+                        <section class="block u-mb0">
                             <h1 class="header-slug">
                                 <span class="header-slug_inner">
                                     Related links
