--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -38,7 +38,7 @@
             <div class="content_main content__flush-top-on-small">
                 <section>
 
-                    <div class="block block__flush-top">
+                    <div class="block u-mt0">
                         <h1>
                             Deputy Director Steven Antonakes
                         </h1>
