--- a/the-bureau/history/index.html
+++ b/the-bureau/history/index.html
@@ -39,7 +39,7 @@
             <div class="content_main content__flush-top-on-small">
                 <section>
 
-                    <div class="block block__flush-top">
+                    <div class="block u-mt0">
                         <h1>
                             The history of the Consumer Financial Protection Bureau
                         </h1>
