--- a/contact-us/promoted-contacts.html
+++ b/contact-us/promoted-contacts.html
@@ -2,7 +2,7 @@
 {% set whistleblowers = get_document('contact', 'whistleblowers') %}
 {% set tribal_consultation = get_document('contact', 'tribal-consultation') %}
 
-<div class="block block__flush-bottom content-l">
+<div class="block u-mb0 content-l">
     
     <section class="block content-l_col content-l_col__stack-on-cols content-l_col-1-2">
         <h1 class="h5">
