--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -45,7 +45,7 @@
             </div>
 
             <aside class="content_sidebar">
-                <section class="block block__flush-top">
+                <section class="block u-mt0">
                     {% include "related-posts.html" %}
                 </section>
                 <section class="block stay-informed">
