Refactored filters to use unique ids and refactored calling of the input split js.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -140,6 +140,7 @@
                         {{ post_macros.filters(
                              ['calendar', 'range_date'], query, posts, 'calendar_event',
                              {
+                               'id_prefix': 'download',
                                'expand_label': 'Download options',
                                'show_current_filters': false,
                                'action': 'pdf/',
