--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -99,9 +99,12 @@
                                 expandable__mobile-only 
                                 u-mb0 
                                 bureau-functions">
-                        <button class="expandable_header 
-                                       expandable_header__jump-link 
+                        <button class="expandable_header
+                                       
                                        expandable_target
+                                       link-text
+                                          link-border
+                                          jump-link
                                        u-show-on-mobile">
                             <span class="expandable_header-left expandable_label">
                                 Expand to see what we do
