Fixes a merge conflict whoopsie.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -126,10 +126,8 @@
 
                     {{ post_macros.pagination(posts, ['calendar', 'range_date_gte', 'range_date_lte']) }}
 
-                    <section class="content_block
-                                    block__padded-top
-                                    block__border-top">
-                        <h1 class="content_title__large">
+                    <section class="block block__padded-top block__border-top">
+                        <h1 class="h2">
                             Download a copy
                         </h1>
                         <p>
