--- a/the-bureau/leadership-calendar/print/index.html
+++ b/the-bureau/leadership-calendar/print/index.html
@@ -29,7 +29,7 @@
                 {{ post_macros.active_filters(posts, ['calendar', 'range_date']) }}
                 <br>
             {% for days in posts|groupby('day')|reverse %}
-                <table class="u-w100pct content_block content_block__flush-top">
+                <table class="u-w100pct block block__flush-top">
                     <colgroup>
                         <col class="u-w25pct">
                         <col class="u-w25pct">
