More edits for James.

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -43,9 +43,7 @@
 
                         <div class="press-section_intro press-contacts_intro">
 
-                            <p>We are committed to engaging with the public and members of the media
-                                regularly with accurate and up-to-date information on our work.
-                                Materials in this section are produced by our Office of Communications.</p>
+                            <p>We are committed to engaging with the public and members of the media regularly with accurate and up-to-date information on our work. News media should use this information to reach our Office of Communications. For other questions, see <a href="/contact-us/">Contact Us</a>.</p>
 
                         </div>
 
