--- a/the-bureau/bureau-structure/index.html
+++ b/the-bureau/bureau-structure/index.html
@@ -189,11 +189,10 @@
                         </div>
                         <div class="content-l_col content-l_col-1-2">
                             <h2 class="h3">Request speaking info</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Dolorum non sapiente nobis molestias delectus optio ipsam</p>
+                            <p>Ask a CFPB employee to be involved in a forum, publication, discussion, or other event; or to inquire about any CFPB events.</p>
                             <span class="cf-icon cf-icon-email list_icon"></span>
-                            <a class="list_link" href="mailto:externalaffairs@cfpb.gov">
-                                externalaffairs@cfpb.gov
+                            <a class="list_link" href="mailto:cfpb.events@cfpb.gov">
+                                cfpb.events@cfpb.gov
                             </a>
                         </div>
                     </div>
