--- a/the-bureau/bureau-structure/index.html
+++ b/the-bureau/bureau-structure/index.html
@@ -180,8 +180,7 @@
                     <div class="content-l">
                         <div class="content-l_col content-l_col-1-2">
                             <h2 class="h3">Download a copy</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Dolorum non sapiente nobis molestias delectus optio ipsam</p>
+                            <p>Download a printable, PDF copy of this organizational chart. This version is expanded to show all offices.</p>
                             <a class="btn btn__secondary" href="#">
                                 <span class="btn_icon__left cf-icon cf-icon-save"></span>
                                 Download PDF
