More edits for James.

--- a/the-bureau/bureau-structure/index.html
+++ b/the-bureau/bureau-structure/index.html
@@ -180,7 +180,9 @@
                     <div class="content-l">
                         <div class="content-l_col content-l_col-1-2">
                             <h2 class="h3">Download a copy</h2>
-                            <p>Download a printable, PDF copy of this organizational chart. This version is expanded to show all offices.</p>
+                            <p>
+                                Download a printable, PDF copy of this organizational chart. This version
+                                is expanded to show all offices.</p>
                             <a class="btn btn__secondary" href="#">
                                 <span class="btn_icon__left cf-icon cf-icon-save"></span>
                                 Download PDF
@@ -188,7 +190,10 @@
                         </div>
                         <div class="content-l_col content-l_col-1-2">
                             <h2 class="h3">Request speaking info</h2>
-                            <p>Ask a CFPB employee to be involved in a forum, publication, discussion, or other event; or to inquire about any CFPB events.</p>
+                            <p>
+                                Ask a CFPB employee to be involved in a forum, publication, discussion, or
+                                other event; or to inquire about any CFPB events.
+                            </p>
                             <span class="cf-icon cf-icon-email list_icon"></span>
                             <a class="list_link" href="mailto:cfpb.events@cfpb.gov">
                                 cfpb.events@cfpb.gov
