--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -41,11 +41,12 @@
 
                         <h1 class="press-section_title press-contacts_title">Press contacts</h1>
 
-                        <div class="press-section_intro press-contacts_intro">
-
-                            <p>We are committed to engaging with the public and members of the media regularly with accurate and up-to-date information on our work. News media should use this information to reach our Office of Communications. For other questions, see <a href="/contact-us/">Contact Us</a>.</p>
-
-                        </div>
+                        <p class="press-section_intro press-contacts_intro">
+                            We are committed to engaging with the public and members of the media regularly
+                            with accurate and up-to-date information on our work. News media should use
+                            this information to reach our Office of Communications. For other questions,
+                            see <a href="/contact-us/">Contact Us</a>.
+                        </p>
 
                         <ul class="press-contacts_main-contact-list list list__links list__icons">
                             <li class="list_item">
