--- a/the-bureau/leadership-calendar/print/index.html
+++ b/the-bureau/leadership-calendar/print/index.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}
-{% import "macros.html" as macros %}
-
-{% block demo_title -%}
-    Leadership calendar
-{%- endblock %}
 
 {% block title -%}
     Leadership calendar
@@ -13,70 +8,34 @@
     Leadership calendar
 {%- endblock %}
 
+{# make this one block and use the super function #}
+{% block javascript_global %}
+{% endblock %}
+
+{% block css %}
+    {% include "print-footer.html" %}
+{% endblock %}
+
 {% block body %}
 
     {% import "post-macros.html" as post_macros with context %}
-    {% import "print-footer.html" as print_footer %}
-
-    {{ print_footer }}
+    {% import "leadership-calendar-table.html" as calendar %}
 
     <main class="content" id="main" role="main">
-        <div class="content_wrapper wrapper">
+        <div class="content_wrapper">
             <div class="content_main">
                 {% set query = queries.calendar_event %}
-                {% set posts = query.search_with_url_arguments(size=40) %}
+                {% set posts = query.search_with_url_arguments(size=11000) %}
                 <h1>Leadership calendar</h1>
-                {{ post_macros.active_filters(posts, ['calendar', 'range_date']) }}
+                {{ post_macros.active_filters(posts, ['calendar', 'range_date'], true) }}
                 <br>
-            {% for days in posts|groupby('day')|reverse %}
-                <table class="u-w100pct block block__flush-top">
-                    <colgroup>
-                        <col class="u-w25pct">
-                        <col class="u-w25pct">
-                        <col class="u-w50pct">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th colspan="3">
-                                {{ days.grouper|date('%b %d, %Y') }}
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for event in days.list|sort(attribute='dtstart') %}
-                        <tr>
-                            <td>
-                            {%- if event.all_day %}
-                                All day
-                            {%- else %}
-                                {{ macros.format_time(event.dtstart) }}
-                                &ndash;
-                                {{ macros.format_time(event.dtend) }}
-                            {%- endif %}
-                            </td>
-                            <td>
-                                <span class="h4">
-                                    {{ event.calendar }}
-                                </span>
-                            </td>
-                            <td>
-                                {{ event.summary }}
-                            {% if event.location %}
-                                <br>
-                                <span class="u-small-text">{{ event.location }}</span>
-                            {% endif %}
-                            {% if event.description %}
-                                <br>
-                                <small><i>{{ event.description }}</i></small>
-                            {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            {% endfor %}
+                {{ calendar.render(posts, {
+                    'time_col_classes': 'u-w30pct',
+                    'name_col_classes': 'u-w30pct',
+                    'desc_col_classes': 'u-w40pct'
+                }) }}
             </div>
-        </div>
+        </div><!-- END .wrapper -->
     </main><!-- END .content -->
 
 {% endblock body %}
