--- a/the-bureau/_the-bureau-nav.html
+++ b/the-bureau/_the-bureau-nav.html
@@ -5,7 +5,7 @@
     (path + 'about-rich-cordray/', 'about-rich-cordray', 'Director Cordray'),
     (path + 'about-steve-antonakes/', 'about-steve-antonakes', 'Deputy Director Antonakes'),
     (path + 'bureau-structure/', 'bureau-structure', 'Bureau Structure'),
-    (path + 'leadership-calendar/', 'leadership-calendar', 'Leadership calendar'),
+    (path + 'leadership-calendar/', 'leadership-calendar', 'Leadership Calendar'),
     (path + 'history/', 'history', 'History')
 ] -%}
 
