Fixes print bar margins.

--- a/the-bureau/leadership-calendar/print/index.html
+++ b/the-bureau/leadership-calendar/print/index.html
@@ -31,7 +31,7 @@
                 {{ post_macros.active_filters(posts, ['calendar', 'range_date'], {
                     'show_filters_label': false, 'show_unfiltered_count': true
                 }) }}
-                <div class="print-bar u-mt30 u-mb30"></div>
+                <div class="print-bar"></div>
                 {{ calendar.render(posts, {
                     'time_col_classes': 'u-w30pct',
                     'name_col_classes': 'u-w30pct',
