More semantic print separator.

--- a/the-bureau/leadership-calendar/print/index.html
+++ b/the-bureau/leadership-calendar/print/index.html
@@ -25,13 +25,14 @@
     <main class="content print" id="main" role="main">
         <div class="content_wrapper">
             <div class="content_main">
-                {% set query = queries.calendar_event -%}
-                {%- set posts = query.search_with_url_arguments(size=20000) -%}
-                <h1 class="superheader">Leadership Calendar</h1>
-                {{ post_macros.active_filters(posts, ['calendar', 'range_date'], {
-                    'show_filters_label': false, 'show_unfiltered_count': true
-                }) }}
-                <div class="print-bar"></div>
+                <div class="print-header">
+                    {% set query = queries.calendar_event -%}
+                    {%- set posts = query.search_with_url_arguments(size=20000) -%}
+                    <h1 class="superheader">Leadership Calendar</h1>
+                    {{ post_macros.active_filters(posts, ['calendar', 'range_date'], {
+                        'show_filters_label': false, 'show_unfiltered_count': true
+                    }) }}
+                </div>
                 {{ calendar.render(posts, {
                     'time_col_classes': 'u-w30pct',
                     'name_col_classes': 'u-w30pct',
