POC for activities feed.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -40,6 +40,9 @@
                         content__flush-bottom">
                 <section>
 
+                    {{ post_macros.tag_activity('posts', 'Students', 2) }}
+                    {{ post_macros.tag_activity('newsroom', 'Students', 2) }}
+
                     <div class="block
                                 u-mt0
                                 block__padded-bottom
