--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                     </div>
                 </div>
 
-                <div class="content_block
-                            content_block__padded-top
-                            content_block__border-top
-                            content_block__flush-bottom">
+                <div class="block
+                            block__padded-top
+                            block__border-top
+                            block__flush-bottom">
                     <div class="content-l content-l__large-gutters">
                         <section class="content-l_col content-l_col-1-2">
                             <h3>Why are we redesigning in&nbsp;beta?</h3>
@@ -175,7 +175,7 @@
                             </ul>
                         </section>
                     </div><!-- END .content-l -->
-                </div><!-- END .content_block -->
+                </div><!-- END .block -->
             </section><!-- END .content_main -->
         </div><!-- END .content_wrapper -->
 
