More robust testing page.

--- a/activities-test.html
+++ b/activities-test.html
@@ -22,8 +22,14 @@
         <div class="wrapper content_wrapper">
             <div class="content_main">
                 <section>
-                    {% from "post-macros.html" import activity_snippets as activity with context %}
-                    {{ activity('Students') }}
+                    {% from "post-macros.html" import activity_snippets as activity_snippets with context %}
+                    {% set activities = selected_filters_for_field('activity') %}
+                    {% for activity in activities %}
+                    <div class="block u-mt0">
+                        <h1>Testing activities for '{{ activity }}'</h1>
+                        {{ activity_snippets(activity) }}
+                    </div>
+                    {% endfor %}
                 </section>
             </div><!-- END .content_main -->
         </div><!-- END .content_wrapper -->
